--- a/Offers/templates/Index/index.html
+++ b/Offers/templates/Index/index.html
@@ -19,83 +19,26 @@
     </div>
     <!-- ***** Main Banner Area End ***** -->
 
-   <!-- ***** Cars Starts ***** -->
-    <section class="section" id="trainers">
+   <section id="schedule")>
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 offset-lg-3">
                     <div class="section-heading">
-                        <h2>Featured <em>Jobs</em></h2>
+                        <h2>About our <em>company</em></h2>
                         <img src="{% static 'images/line-dec.png' %}" alt="">
-                        <p>Nunc urna sem, laoreet ut metus id, aliquet consequat magna. Sed viverra ipsum dolor, ultricies fermentum massa consequat eu.</p>
+                        <h6>Nunc urna sem, laoreet ut metus id, aliquet consequat magna. Sed viverra ipsum dolor, ultricies fermentum massa consequat eu.</h6>
+                    </div>
+                <div class="col-lg-12">
+                    <div class="cta-content text-center">
+                        <h6>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore deleniti voluptas enim! Provident consectetur id earum ducimus facilis, aspernatur hic, alias, harum rerum velit voluptas, voluptate enim! Eos, sunt, quidem.</h6>
+                        <p>&nbsp;</p>
+                        <h7>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto nulla quo cum officia laboriosam. Amet tempore, aliquid quia eius commodi, doloremque omnis delectus laudantium dolor reiciendis non nulla! Doloremque maxime quo eum in culpa mollitia similique eius doloribus voluptatem facilis! Voluptatibus, eligendi, illum. Distinctio, non!</h7>
                     </div>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-4">
-                    <div class="trainer-item">
-                        <div class="image-thumb">
-                            <img src="{% static 'images/product-1-720x480.jpg' %}" alt="">
-                        </div>
-                        <div class="down-content">
-                            <span> <sup>$</sup>70 000 </span>
-
-                            <h4>Lorem ipsum dolor sit amet, consectetur</h4>
-
-                            <p>Medical &nbsp;/&nbsp; Health Jobs</p>
-
-                            <ul class="social-icons">
-                                <li><a href="job-details.html">+ View More</a></li>
-                            </ul>
-                        </div>
-                    </div>
                 </div>
-                <div class="col-lg-4">
-                    <div class="trainer-item">
-                        <div class="image-thumb">
-                            <img src="{% static 'images/product-2-720x480.jpg' %}" alt="">
-                        </div>
-                        <div class="down-content">
-                            <span> <sup>$</sup>70 000 </span>
-
-                            <h4>Lorem ipsum dolor sit amet, consectetur</h4>
-
-                            <p>Medical &nbsp;/&nbsp; Health Jobs</p>
-
-                            <ul class="social-icons">
-                                <li><a href="job-details.html">+ View More</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4">
-                    <div class="trainer-item">
-                        <div class="image-thumb">
-                            <img src="{% static 'images/product-3-720x480.jpg' %}" alt="">
-                        </div>
-                        <div class="down-content">
-                            <span> <sup>$</sup>70 000 </span>
-
-                            <h4>Lorem ipsum dolor sit amet, consectetur</h4>
-
-                            <p>Medical &nbsp;/&nbsp; Health Jobs</p>
-
-                            <ul class="social-icons">
-                                <li><a href="job-details.html">+ View More</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <br>
-
-            <div class="main-button text-center">
-                <a href="{% url 'jobs' %}">View Jobs</a>
             </div>
         </div>
     </section>
-    <!-- ***** Cars Ends ***** -->
 
     <!-- ***** Call to Action Start ***** -->
     <section class="section section-bg" id="call-to-action" style="background-image: url(static/images/banner-image-1-1920x500.jpg)">
