--- a/Offers/templates/Index/profile.html
+++ b/Offers/templates/Index/profile.html
@@ -3,15 +3,17 @@
 {% block head %}
 {% endblock %}
 {% block body %}
-    <section class="section section-bg" id="call-to-action" style="background-image: url({% static 'images/banner-image-1-1920x500.jpg' %})">
+    <section class="section section-bg" id="call-to-action" style="background-image: url({% static 'images/about-fullscreen-1-1920x700.jpg' %})">
         <div class="container">
             <div class="row">
                 <div class="col-lg-10 offset-lg-1">
                     <div class="cta-content">
                         <br>
                         <br>
-                        <h2>To jest twoj profil  <em>:DDDD</em></h2>
-                        <p>jakis cyctat</p>
+                        <br>
+                        <h2>your <em>profile</em></h2>
+                        <br>
+                        <br>
                     </div>
                 </div>
             </div>
@@ -19,83 +21,46 @@
     </section>
 
     <!-- ***** Features Item Start ***** -->
-    <section class="section" id="features">
-        <div class="container">
-            <div class="row text-center">
-                <div class="col-lg-6 offset-lg-3">
-                    <div class="section-heading">
+    <section>
+        <div class="text-center">
+            <br>
+            <br>
+            <!-- FORMY DJANGO DO TWORZENIA OFERTY -->
+            <form method="post" action="{% url 'profile' %}">
+                <h2>Add new offer</h2>
+                <br>
+              {% csrf_token %}
 
-                        <!-- FORMY DJANGO DO TWORZENIA OFERTY -->
-                        <form id="profile" method="post" action="{% url 'profile' %}">
-                      {% csrf_token %}
-
-                        {% if form.errors %}
+                {% if form.errors %}
                   <p>{{form.errors}}</p>
                   {% endif %}
 
-                     <p>{{form.company.label}}
-                      {{form.company}}</p>
-                        <p>&nbsp;</p>
-                      <p>{{form.position.label}}
-                      {{form.position}}</p>
-                        <p>&nbsp;</p>
-                      <p>{{form.min_salary.label}}
-                      {{form.min_salary}}</p>
-                        <p>&nbsp;</p>
-                      <p>{{form.max_salary.label}}
-                      {{form.max_salary}}</p>
-                        <p></p>
-                             <p>{{form.remote.label}}
-                      {{form.remote}}</p>
-                        <p></p>
-                             <p>{{form.location.label}}
-                      {{form.location}}</p>
-                        <p></p>
-                             <p>{{form.description.label}}
-                      {{form.description}}</p>
-                        <p></p>
+             <p>{{form.company.label}}
+              {{form.company}}</p>
+                <br>
+              <p>{{form.position.label}}
+              {{form.position}}</p>
+                <br>
+              <p>{{form.min_salary.label}}
+              {{form.min_salary}}</p>
+                <br>
+              <p>{{form.max_salary.label}}
+              {{form.max_salary}}</p>
+                <br>
+                     <p>{{form.remote.label}}
+              {{form.remote}}</p>
+                <br>
+                     <p>{{form.location.label}}
+              {{form.location}}</p>
+                <br>
+                     <p>{{form.description.label}}
+              {{form.description}}</p>
+                <br>
 
+               <p><input type="submit" class="main-button"  value="Add"></p>
+              <input type="hidden" name="next" value="{{ next }}">
 
-                       <p><input type="submit"  value="Add"></p>
-                      <input type="hidden" name="next" value="{{ next }}">
-
-
-                  </form>
-
-
-                    </div>
-                </div>
-
-                <div class="col-md-4">
-                    <div class="icon">
-                        <i class="fa fa-phone"></i>
-                    </div>
-
-                    <h5><a href="#">+1 333 4040 5566</a></h5>
-
-                    <br>
-                </div>
-
-                <div class="col-md-4">
-                    <div class="icon">
-                        <i class="fa fa-envelope"></i>
-                    </div>
-
-                    <h5><a href="#">contact@company.com</a></h5>
-
-                    <br>
-                </div>
-
-                <div class="col-md-4">
-                    <div class="icon">
-                        <i class="fa fa-map-marker"></i>
-                    </div>
-
-                    <h5>212 Barrington Court New York</h5>
-
-                    <br>
-                </div>
-            </div>
+            </form>
         </div>
     </section>
     <!-- ***** Features Item End ***** -->
