Formularz aplikowania na oferty prawie działa, ale wrzycam commit bo muszę spadać

--- a/Offers/templates/Offers/job-details.html
+++ b/Offers/templates/Offers/job-details.html
@@ -15,7 +15,7 @@
                         <p>{{offer.position}}</p>
 
                         <div class="main-button">
-                          <a href="#">Apply for this Job</a>
+                          <a href="apply-for-job">Apply for this Job</a>
                         </div>
                     </div>
                 </div>
