--- a/Offers/templates/Offers/jobs.html
+++ b/Offers/templates/Offers/jobs.html
@@ -179,7 +179,7 @@
                                     {% with logo_dict|get_item:offer as image_static %}
 
                                         {% if not image_static %}
-                                            <img src="{% static 'images/product-1-720x480.jpg' %}" alt="">
+                                            <img src="{% static 'images/logo_przykładowe.jpg' %}" alt="">
                                         {% else %}
                                             <img src="{% static image_static %}" alt="">
                                         {% endif %}
