--- a/Offers/templates/Index/base.html
+++ b/Offers/templates/Index/base.html
@@ -41,6 +41,7 @@
                             <li><a href="{% url 'jobs' %}">Jobs</a></li>
                             <li><a href="{% url 'about' %}">About us</a></li>
                             {% if user.is_authenticated %}
+                            <li><a href="{% url 'company_profile' %}"><b>Company</b></a></li>
                             <li><a href="{% url 'profile' %}"><b>{{user.username}}</b></a></li>
                             <li><a href="/logout/">Log out</a></li>
                             {% else %}
