--- a/Offers/templates/Index/profile.html
+++ b/Offers/templates/Index/profile.html
@@ -63,12 +63,21 @@
                         </div>
 
                         <div class="col-sm-6">
-                            <br>
+
+                            <div class="main-button">
+                    <a href="{% url 'addoffer' %}">Edit your profile</a>
+                  </div>
                         </div>
 
                         <div class="col-sm-6">
                           <label>Address:</label>
-                            <p>{{company.city}}, {{company.street}} {{company.street_number}}</p>
+                            <p>{{company.city}}, {{company.street}} {{company.street_number}}
+                            {% if company.suite_number %}
+                                /{{company.suite_number}}
+                            {% endif %}
+                            </p>
+                            <p>{{company.postcode}} {{company.city}}</p>
+                            <br>
                         </div>
 
                         <div class="col-sm-6">
@@ -76,8 +85,9 @@
                         </div>
 
                         <div class="col-sm-6">
-                          <label>Company city:</label>
-                            <p>{{company.city}}</p>
+                          <label>Phone:</label>
+                            <p>{{company.phone}}</p>
+                            <br>
                         </div>
 
                         <div class="col-sm-6">
@@ -85,35 +95,27 @@
                         </div>
 
                         <div class="col-sm-6">
-                          <label>Company city:</label>
-                            <p>{{company.city}}</p>
+                          <label>Website:</label>
+                            <p>{{company.social_links}}</p>
                         </div>
 
-                        <div class="col-sm-6">
+
+
+                         <div class="col-sm-6">
                             <br>
                         </div>
 
                         <div class="col-sm-6">
-                          <label>Company city:</label>
-                            <p>{{company.city}}</p>
+                            <br>
+                          <div class="main-button">
+                            <a href="{% url 'addoffer' %}">Edit your company profile</a>
+                          </div>
                         </div>
+
                     </div>
-                <div class="cta-content">
-                    <div class="down-content">
-                        Username: {{ user.username }}
-                        <br>
-                        Email: {{ user.email }}
-                        <br>
-                        Company name: {{company.company_name}}
 
-                        <br>
-                        <br>
-                        <br>
-                    </div>
-                  <div class="main-button">
-                    <a href="{% url 'addoffer' %}">Edit your profile</a>
-                  </div>
-                </div>
+
+
         </div>
       </div>
     </section>
