Częściowy postęp formularzy edytowania

--- a/Offers/templates/Index/profile.html
+++ b/Offers/templates/Index/profile.html
@@ -108,7 +108,7 @@
                         <div class="col-sm-6">
                             <br>
                           <div class="main-button">
-                            <a href="{% url 'addoffer' %}">Edit your company profile</a>
+                            <a href="{% url 'edit_company' %}">Edit your company profile</a>
                           </div>
                         </div>
 
