--- a/Offers/templates/Index/profile.html
+++ b/Offers/templates/Index/profile.html
@@ -39,6 +39,10 @@
 
                         <div class="col-sm-6">
                             <h4 style="color:#ed563b">Company: </h4>
+
+                                <img src="{{ company.logo.url }}" alt="No logo">
+
+
                         </div>
 
                         <div class="col-sm-6">
