--- a/Offers/templates/Index/base.html
+++ b/Offers/templates/Index/base.html
@@ -41,8 +41,14 @@
                             <li><a href="{% url 'jobs' %}">Jobs</a></li>
                             <li><a href="{% url 'about' %}">About us</a></li>
                             {% if user.is_authenticated %}
-                            <li><a href="{% url 'company_profile' %}"><b>Company</b></a></li>
-                            <li><a href="{% url 'profile' %}"><b>{{user.username}}</b></a></li>
+                            <li class="dropdown">
+                               <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false"><b>{{user.username}}</b></a>
+
+                                    <div class="dropdown-menu">
+                                        <a class="dropdown-item" href="{% url 'profile' %}">Edit profile</a>
+                                        <a class="dropdown-item" href="{% url 'company_profile' %}">Manage offers</a>
+                                    </div>
+                            </li>
                             <li><a href="/logout/">Log out</a></li>
                             {% else %}
                             <li><a href="{% url 'login' %}">Log in</a></li>
