--- a/Offers/templates/Offers/jobs.html
+++ b/Offers/templates/Offers/jobs.html
@@ -31,21 +31,21 @@
             <div class="row">
                 <div class="col-lg-4">
 
-                    <form method="post" action="{% url 'search' %}">
+                    <form method="GET" action="{% url 'search' %}">
 
                          <h5 style="margin-bottom: 15px">Salary</h5>
 
                          <div>
                               <label>
                                   <span>Min. </span>
-                                   <input type="number" name="min_pay">
+                                   <input type="number" name="min_pay_html">
                               </label>
                          </div>
 
                          <div>
                               <label>
                                   <span>Max. </span>
-                                   <input type="number" name="max_pay">
+                                   <input type="number" name="max_pay_html">
                               </label>
                          </div>
 
@@ -56,7 +56,7 @@
                               <label>
 
                                    <span><h5 style="margin-bottom: 15px">Position</h5> </span>
-                                   <input type="text" name="position">
+                                   <input type="text" name="position_html">
 
 
                               </label>
@@ -65,7 +65,7 @@
                          <div>
                               <label>
                                   <span><h5 style="margin-bottom: 15px">Company</h5></span>
-                                   <input type="text" name="company">
+                                   <input type="text" name="company_html">
 
                               </label>
                          </div>
@@ -75,30 +75,28 @@
                               <label>
 
                                   <span><h5 style="margin-bottom: 15px">Location</h5> </span>
-                                   <input type="text" name="location">
+                                   <input type="text" name="location_html">
 
 
                               </label>
                          </div>
-
 
 
                          <div>
                               <label>
 
                                   <span><h5 style="margin-bottom: 15px">Remote</h5> </span>
-                                   <input type="checkbox">
+                                   <input type="checkbox" name="remote_html">
 
 
                               </label>
                          </div>
 
 
-
                         <p>&nbsp;</p>
-
                         <div class="main-button">
-                            <a href="{% url 'search' %}">Search</a>
+                            <button type="submit" class="btn btn-primary">Search</button>
+                            <!-- <a href="{% url 'search' %}">Search</a> -->
                         </div>
                     </form>
 
